# dominate

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
dominate/: document.py  dom1core.py  dom_tag.py  svg.py  tags.py  util.py
tests/: test_document.py  test_dom1core.py  test_dominate.py  test_html.py  test_svg.py  test_utils.py
