[tool.poetry]
name = "dominate"
version = "2.8.0-dev"
description = "Dominate is a Python library for creating and manipulating HTML documents using an elegant DOM API."
authors = ["Tom Flanagan <tom@zkpq.ca>", "Jake Wharton <jakewharton@gmail.com>", "Brad Janke"]
license = "LGPLv3"
readme = "README.md"
keywords = ["framework", "templating", "template", "html", "xhtml", "python", "html5"]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.8.0"
ipython = "^8.5.0"
pyupgrade = "^2.38.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
